--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=yes, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/todos.css">
     <title>Todo List</title>
 </head>
@@ -12,7 +14,7 @@
 
 <div id="container">
     <h1>To-Do List</h1>
-    <input type="text">
+    <input type="text" placeholder="Add New Todo">
     <ul>
         <li><span>X</span> Go To Potions Class</li>
         <li><span>X</span> Buy New Robes</li>
