--- a/index.html
+++ b/index.html
@@ -7,18 +7,20 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet">
+    <link rel="stylesheet" href="assets/css/lib/font-awesome.css">
     <link rel="stylesheet" href="assets/css/todos.css">
     <title>Todo List</title>
 </head>
 <body>
 
 <div id="container">
-    <h1>To-Do List</h1>
+    <h1>To-Do List <i class="fa fa-plus" aria-hidden="true"></i>
+    </h1>
     <input type="text" placeholder="Add New Todo">
     <ul>
-        <li><span>X</span> Go To Potions Class</li>
-        <li><span>X</span> Buy New Robes</li>
-        <li><span>X</span> Visit Hagrid</li>
+        <li><span><i class="fa fa-trash" aria-hidden="true"></i></span> Go To Potions Class</li>
+        <li><span><i class="fa fa-trash" aria-hidden="true"></i></span> Buy New Robes</li>
+        <li><span><i class="fa fa-trash" aria-hidden="true"></i></span> Visit Hagrid</li>
     </ul>
 </div>
 
